--- a/index.html
+++ b/index.html
@@ -5,18 +5,43 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, minimum-scale,maximum-scale=1, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <style type="text/css">
+        *{
+            margin:0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        #canvas{
+            height: 100vh;
+            width: 100%;
+            border: 1px solid red;
+        }
+        .point{
+            position: absolute;
+            width: 6px;
+            height: 6px;
+            border-radius: 50%;
+            background-color: black;
+        }
+    </style>
     <title>Canvas</title>
 </head>
 <body>
-    <canvas id="canvas">
-
-    </canvas>
+    <div id="canvas">
+    </div>
     <script>
-        const canvas = document.querySelector("#canvas");
-        const  ctx = canvas.getContext("2d");
+        canvas.onclick = (e)=>{
+            console.log(e)
+            console.log(e.clientX);
+            console.log(e.clientY);
 
-        ctx.fillStyle = "green";
-        ctx.fillRect(10,10,150,100);
+            let div = document.createElement("div")
+            div.classList.add("point")
+            div.style.left = e.clientX + "px"
+            div.style.top = e.clientY + "px"
+            div.style.transform = 'translate(-3px,-3px)'
+            canvas.appendChild(div)
+        }
     </script>
 </body>
 </html>
